Fixed position issue with footer on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -551,16 +551,8 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
-}
-
-.bottom-3 {
-  bottom: 0.75rem;
 }
 
 .my-8 {
@@ -936,6 +928,14 @@ video {
     margin-top: auto;
   }
 
+  .lg\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .lg\:mt-32 {
+    margin-top: 8rem;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -1002,11 +1002,6 @@ video {
 }
 
 @media (hover: none) {
-  .no-hover\:bg-strongCyan {
-    --tw-bg-opacity: 1;
-    background-color: hsl(172 67% 45% / var(--tw-bg-opacity));
-  }
-
   .no-hover\:hover\:bg-strongCyan:hover {
     --tw-bg-opacity: 1;
     background-color: hsl(172 67% 45% / var(--tw-bg-opacity));
